--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,10 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 80%;
-  border: 10px solid black;
 }
 
 #small-image-and-name {
   display: flex;
-  border: 1px solid red;
 }
 
 #small-image {
@@ -44,12 +42,28 @@ body {
   flex: 1 1 0;
   justify-content: space-between;
   align-items: center;
-  border: 10px solid purple
+}
+
+#about-container {
+  width: 20%;
 }
 
 #about {
-  width: 20%;
-  border: 1px solid black
+  width: 100%;
+  margin-bottom: 4px;
+}
+
+#icon-container {
+  height: auto;
+  display: flex;
+  gap: 20px;
+}
+
+.icon {
+  height: 40px;
+  width: 40px;
+  background-color: #131313;
+  border-radius: 4px;
 }
 
 #image-container {
@@ -58,7 +72,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black
 }
 
 img {
@@ -73,15 +86,22 @@ img {
   width: 20%;
   display: flex;
   flex-direction: column;
-  border: 1px solid black
+
 }
 
 #footer-container {
   text-align: center;
-  border: 10px solid black;
   padding: 20px;
   max-width: 80%;
   width: 90%;
   background-color: #fff;
   border-radius: 8px;
 }
+
+.circle {
+  width: 400px;
+  height: 400px;
+  background: linear-gradient(90deg, #efd5ff 0%, #515ada 100%);
+  border-radius: 50%;
+}
+
