--- a/styles.css
+++ b/styles.css
@@ -77,37 +77,152 @@ body {
 }
 
 .about-container {
-  height: 50vh;
+  height: 80dvh;
   width: 95%;
   border-radius: 20px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 20px;
-  grid-row-gap: 20px; 
 }
 
 .about-text-container {
   background-color: #f3f3f3;
-  border-radius: 8px;
-  align-content: center;
+  border-radius: 4px;
   padding: 20px;
+  display: flex;
+  flex: 1 1 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  height: 100%;
+}
+
+.title-container {
+  background-color: #f3f3f3;
+  padding: 20px;
+  border-radius: 4px;
+  margin-bottom: 20px;
 }
 
 .title {
   font-family: 'Inter', sans-serif;
   font-weight: 900;
-  font-size: 180px;
-  line-height: 160px;
+  font-size: 160px;
+  line-height: 130px;
+  text-transform: uppercase;
+  color: #121212;
+}
+
+.about-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px; 
 }
 
 .about-text {
-  font-family: monospace;
-  font-weight: light;
+  font-family: 'Inter', sans-serif;
+  font-weight: 300;
   font-size: 20px;
   letter-spacing: 4px;
-  line-height: 18px;
+  line-height: 20px;
   text-align: left;
+  margin-top: 20px;
+}
+
+.about-title {
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
+  font-weight: 900;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.work-container {
+  display: flex;
+  width: 95%;
+  height: 50vh;
+  gap: 20px;
+}
+
+.work-left-section-container {
+  width: 50%;
+  background-color: #f3f3f3;
+  border-radius: 4px;
+  padding: 20px;
+}
+
+.work-right-section-container {
+  width: 50%;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-row-gap: 20px;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  border-radius: 4px;
+}
+
+.grid-item {
+  width: 100%;
+  height: 50dvh;
+  background-color: #f3f3f3;
+  border-radius: 4px;
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+  text-align: center;
+  align-content: center;
+  font-size: 200px;
+  font-weight: 900;
+}
+
+.footer-container {
+  /* margin-top: 100px; */
+  height: 100vh;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  overflow: hidden;
+  /* border: 1px solid rebeccapurple; */
+}
+
+.footer-text-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.footer-text {
+  margin-top: 0;
+  width: 50%;
+  padding: 20px;
+  background-color: #f3f3f3;
+  border-radius: 4px;
+  align-content: center;
+}
+
+.footer-title-container {
+  margin-top: 100px;
+  background-color: #f3f3f3;
+  padding: 20px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+}
+
+.footer-title {
+  margin-top: 10px;
+  font-size: 224px;
+  font-weight: 900;
+  line-height: 150px;
+  text-transform: uppercase;
+  color: #121212;
+}
+
+.cal {
+  background-color: #f3f3f3;
+  border-radius: 4px;
+  padding: 20px;
 }
 
 #shader-canvas {
